# rag-anywhere

./: .gitignore  LICENSE  README.md  config.yaml  go.mod  go.sum  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  setup.py  todo.txt
cmd/server/: main.go
examples/: client.py  test_document.txt
internal/api/: common.go  handlers_db.go  handlers_docs.go  handlers_kg.go  handlers_search.go  handlers_service.go  types.go
internal/config/: compatibility.go  models.go
internal/ingest/: types.go
internal/ipc/: service.go
internal/models/: convert.go  types.go  worker_msgs.go
internal/pipeline/: extract.go  tokenizer.go
internal/store/: config.go  manager.go  schema_def.go
python/: embedding_worker.py  ner_worker.py  requirements.txt  vector_db_worker.py
rag_anywhere/: __init__.py
rag_anywhere/cli/: __init__.py  context.py  main.py
rag_anywhere/cli/commands/: __init__.py  db.py  documents.py  info.py  kg.py  search.py  server.py
rag_anywhere/config/: __init__.py  embedding_config.py  settings.py
rag_anywhere/core/: __init__.py  document_store.py  embeddings.py  entity_store.py  indexer.py  keyword_search.py  loaders.py  searcher.py  splitter.py  vector_store.py
rag_anywhere/core/embeddings/: __init__.py  base.py  factory.py  utils.py
rag_anywhere/core/embeddings/providers/: __init__.py  embedding_gemma.py  openai.py
rag_anywhere/core/gliner/: __init__.py  batch_processor.py  gliner_base.py  models.py  sub_chunker.py
rag_anywhere/core/loaders/: __init__.py  base.py  docx.py  pdf.py  registry.py  text.py
rag_anywhere/core/splitters/: __init__.py  base.py  factory.py  recursive.py  structural.py
rag_anywhere/server/: __init__.py  __main__.py  app.py  dependencies.py  lifecycle.py  manager.py  models.py  state.py
rag_anywhere/server/routes/: __init__.py  admin.py  documents.py  kg.py  search.py
rag_anywhere/utils/: __init__.py  logging.py
tests/: test_api.py
